ui improvements in font and fixed add button overlapping

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -946,6 +946,7 @@ footer a {
   display: flex;
   flex-wrap: wrap;
   gap: 12px;
+  padding-top: 24px;
 }
 
 .roadmap-card {
